// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Component should match the Box component snapshot 1`] = `
<div
  onClick={[Function]}
  style={
    Object {
      "border": "2px solid navy",
      "borderRadius": "4px",
      "boxSizing": "borderBox",
      "height": "200px",
      "lineHeight": "200px",
      "position": "relative",
      "textAlign": "center",
      "width": "400px",
    }
  }>
  Hello World
</div>
`;

exports[`Box Component should match the Box component snapshot 2`] = `
<div
  onClick={[Function]}
  style={
    Object {
      "border": "2px solid navy",
      "borderRadius": "4px",
      "boxSizing": "borderBox",
      "height": "200px",
      "lineHeight": "200px",
      "position": "relative",
      "textAlign": "center",
      "width": "400px",
    }
  }>
  Goodbye World
</div>
`;

exports[`Box Component should match the Box component snapshot 3`] = `
<div
  onClick={[Function]}
  style={
    Object {
      "border": "2px solid navy",
      "borderRadius": "4px",
      "boxSizing": "borderBox",
      "height": "200px",
      "lineHeight": "200px",
      "position": "relative",
      "textAlign": "center",
      "width": "400px",
    }
  }>
  Hello World
</div>
`;
